src/gen/HLCostLanParser.java
// Generated from C:/Users/simon/Desktop/CostCompiler/src\HLCostLan.g4 by ANTLR 4.12.0
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HLCostLanParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, ID=40, NUMBER=41, NEWLINE=42, LINECOMMENTS=43, WS=44, BLOCKCOMMENTS=45, 
		LINE_NUMBER=46;
	public static final int
		RULE_main = 0, RULE_declarationService = 1, RULE_typeDecl = 2, RULE_fund = 3, 
		RULE_stm = 4, RULE_callService = 5, RULE_letIn = 6, RULE_cond = 7, RULE_listExp = 8, 
		RULE_exp = 9, RULE_assignment = 10, RULE_type = 11, RULE_complexType = 12, 
		RULE_arrayType = 13, RULE_typeArr = 14, RULE_structAssignment = 15, RULE_assign = 16, 
		RULE_params = 17, RULE_formalParams = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "declarationService", "typeDecl", "fund", "stm", "callService", 
			"letIn", "cond", "listExp", "exp", "assignment", "type", "complexType", 
			"arrayType", "typeArr", "structAssignment", "assign", "params", "formalParams"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'service'", "':'", "'('", "','", "')'", "'->'", "';'", "'fn'", 
			"'{'", "'}'", "'if'", "'else'", "'for'", "'in'", "'call'", "'let'", "'+'", 
			"'-'", "'>'", "'=='", "'>='", "'!='", "'&&'", "'*'", "'/'", "'.'", "'\"'", 
			"'='", "'int'", "'char'", "'string'", "'bool'", "'float'", "'any'", "'void'", 
			"'array'", "'['", "']'", "'struct'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "ID", "NUMBER", "NEWLINE", "LINECOMMENTS", "WS", 
			"BLOCKCOMMENTS", "LINE_NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HLCostLan.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HLCostLanParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public List<ComplexTypeContext> complexType() {
			return getRuleContexts(ComplexTypeContext.class);
		}
		public ComplexTypeContext complexType(int i) {
			return getRuleContext(ComplexTypeContext.class,i);
		}
		public List<DeclarationServiceContext> declarationService() {
			return getRuleContexts(DeclarationServiceContext.class);
		}
		public DeclarationServiceContext declarationService(int i) {
			return getRuleContext(DeclarationServiceContext.class,i);
		}
		public List<FundContext> fund() {
			return getRuleContexts(FundContext.class);
		}
		public FundContext fund(int i) {
			return getRuleContext(FundContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__35 || _la==T__38) {
				{
				{
				setState(38);
				complexType();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(44);
				declarationService();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(50);
				fund();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationServiceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HLCostLanParser.ID, 0); }
		public List<TypeDeclContext> typeDecl() {
			return getRuleContexts(TypeDeclContext.class);
		}
		public TypeDeclContext typeDecl(int i) {
			return getRuleContext(TypeDeclContext.class,i);
		}
		public DeclarationServiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationService; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterDeclarationService(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitDeclarationService(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitDeclarationService(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationServiceContext declarationService() throws RecognitionException {
		DeclarationServiceContext _localctx = new DeclarationServiceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarationService);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__0);
			setState(57);
			match(ID);
			setState(58);
			match(T__1);
			setState(59);
			match(T__2);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1167694233600L) != 0)) {
				{
				setState(60);
				typeDecl();
				}
			}

			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(63);
				match(T__3);
				setState(64);
				typeDecl();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(T__4);
			setState(71);
			match(T__5);
			setState(72);
			typeDecl();
			setState(73);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(HLCostLanParser.ID, 0); }
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitTypeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
				{
				setState(75);
				type();
				}
				break;
			case ID:
				{
				setState(76);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FundContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(HLCostLanParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HLCostLanParser.ID, i);
		}
		public FormalParamsContext formalParams() {
			return getRuleContext(FormalParamsContext.class,0);
		}
		public StmContext stm() {
			return getRuleContext(StmContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fund; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterFund(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitFund(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitFund(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FundContext fund() throws RecognitionException {
		FundContext _localctx = new FundContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fund);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__7);
			setState(80);
			match(ID);
			setState(81);
			match(T__2);
			setState(82);
			formalParams();
			setState(83);
			match(T__4);
			setState(84);
			match(T__5);
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(85);
				match(ID);
				}
				break;
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
				{
				setState(86);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(89);
			match(T__8);
			setState(90);
			stm();
			setState(91);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmContext extends ParserRuleContext {
		public CallServiceContext callService() {
			return getRuleContext(CallServiceContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public List<StmContext> stm() {
			return getRuleContexts(StmContext.class);
		}
		public StmContext stm(int i) {
			return getRuleContext(StmContext.class,i);
		}
		public TerminalNode ID() { return getToken(HLCostLanParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(HLCostLanParser.NUMBER, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public LetInContext letIn() {
			return getRuleContext(LetInContext.class,0);
		}
		public ListExpContext listExp() {
			return getRuleContext(ListExpContext.class,0);
		}
		public StmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmContext stm() throws RecognitionException {
		StmContext _localctx = new StmContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				}
				break;
			case 2:
				{
				setState(94);
				callService();
				}
				break;
			case 3:
				{
				setState(95);
				match(T__10);
				setState(96);
				match(T__2);
				setState(97);
				cond();
				setState(98);
				match(T__4);
				setState(99);
				match(T__8);
				setState(100);
				stm();
				setState(101);
				match(T__9);
				setState(102);
				match(T__11);
				setState(103);
				match(T__8);
				setState(104);
				stm();
				setState(105);
				match(T__9);
				}
				break;
			case 4:
				{
				setState(107);
				match(T__12);
				setState(108);
				match(T__2);
				setState(109);
				match(ID);
				setState(110);
				match(T__13);
				setState(111);
				match(T__2);
				setState(112);
				match(NUMBER);
				setState(113);
				match(T__3);
				setState(114);
				exp(0);
				setState(115);
				match(T__4);
				setState(116);
				match(T__4);
				setState(117);
				match(T__8);
				setState(118);
				stm();
				setState(119);
				match(T__9);
				}
				break;
			case 5:
				{
				setState(121);
				letIn();
				}
				break;
			case 6:
				{
				setState(122);
				match(ID);
				setState(123);
				match(T__2);
				setState(124);
				listExp();
				setState(125);
				match(T__4);
				setState(126);
				match(T__6);
				}
				break;
			case 7:
				{
				setState(128);
				exp(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CallServiceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HLCostLanParser.ID, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public StmContext stm() {
			return getRuleContext(StmContext.class,0);
		}
		public CallServiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callService; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterCallService(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitCallService(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitCallService(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallServiceContext callService() throws RecognitionException {
		CallServiceContext _localctx = new CallServiceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_callService);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__14);
			setState(132);
			match(ID);
			setState(133);
			match(T__2);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3298669101056L) != 0)) {
				{
				setState(134);
				exp(0);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(135);
					match(T__3);
					setState(136);
					exp(0);
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(144);
			match(T__4);
			setState(145);
			match(T__6);
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(146);
				stm();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetInContext extends ParserRuleContext {
		public StmContext stm() {
			return getRuleContext(StmContext.class,0);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<StructAssignmentContext> structAssignment() {
			return getRuleContexts(StructAssignmentContext.class);
		}
		public StructAssignmentContext structAssignment(int i) {
			return getRuleContext(StructAssignmentContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(HLCostLanParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HLCostLanParser.ID, i);
		}
		public LetInContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letIn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterLetIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitLetIn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitLetIn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetInContext letIn() throws RecognitionException {
		LetInContext _localctx = new LetInContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_letIn);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(T__15);
			setState(155); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(150);
					match(ID);
					setState(151);
					match(T__1);
					}
					break;
				}
				setState(154);
				assignment();
				}
				}
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(159);
			match(T__13);
			setState(163);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(160);
					structAssignment();
					}
					} 
				}
				setState(165);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(166);
			stm();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode ID() { return getToken(HLCostLanParser.ID, 0); }
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cond);
		int _la;
		try {
			setState(183);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__26:
			case ID:
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				exp(0);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(T__14);
				setState(170);
				match(ID);
				setState(171);
				match(T__2);
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3298669101056L) != 0)) {
					{
					setState(172);
					exp(0);
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__3) {
						{
						{
						setState(173);
						match(T__3);
						setState(174);
						exp(0);
						}
						}
						setState(179);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(182);
				match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListExpContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ListExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).enterListExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HLCostLanListener ) ((HLCostLanListener)listener).exitListExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HLCostLanVisitor ) return ((HLCostLanVisitor<? extends T>)visitor).visitListExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListExpContext listExp() throws RecognitionException {
		ListExpContext _localctx = new ListExpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listExp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			exp(0);
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(186);
				match(T__3);
				setState(187);
				exp(0);
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
